--- a/portal/templates/portal/email_style_template.html
+++ b/portal/templates/portal/email_style_template.html
@@ -346,9 +346,11 @@
     <tr>
       <td valign="top" align="left" class="footer-td">
         <div class="footer">
-          <a href="mailto:codeforlife@ocado.com?subject=Contact us">
-            <p>Contact us</p>
-          </a>
+          <p>
+              <a href="mailto:codeforlife@ocado.com?subject=Contact us">
+              Contact us
+            </a>
+            </p>
           <p><br></p>
           <p>Ocado Innovation Limited is registered in England under registered company number 08813912 with its registered office at Buildings One & Two Trident Place, Mosquito Way, Hatfield, Hertfordshire, United Kingdom, AL10 9UL</p>
           <p>You can find out about our privacy policy <a href="{{ url_prefix }}/privacy-policy" title="Privacy Policy">here</a></p>
