--- a/portal/templates/portal/base.html
+++ b/portal/templates/portal/base.html
@@ -163,7 +163,7 @@
         {% include "portal/partials/session_popup.html" %}
         <script>
           // showing the popup after 28 minutes so it adds up to 30 minutes with the 2 minute countdown
-          setTimeout(showSessionPopup, 1680000);
+          setTimeout(showSessionPopup, 180000);
         </script>
     {% endif %}
 
